# mscan

./: .gitignore  COMPLETION_REPORT.md  EDGAR_PHASE1.md  PHASE1_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PHASE2_SUMMARY.md  README.md  demo_edgar_enrichment.py  demo_phase2.py  pyproject.toml
data/: whotracksme_raw.json
man/: mscan.1
scripts/: build_tracker_db.py  fetch_whotracksme.py
src/mscan/: __init__.py  cli.py  fingerprints.py  report.py  scanner.py
src/mscan/data/: tracker_db.json  vendors.json
src/mscan/enricher/: __init__.py  cache_manager.py  cik_lookup.py  edgar_client.py  profile_builder.py
src/mscan/models/: __init__.py  enriched_brand.py
src/mscan/utils/: __init__.py  rate_limiter.py
tests/enricher/: __init__.py  test_cache_manager.py  test_cik_lookup.py  test_edgar_client.py  test_profile_builder.py
tests/models/: test_enriched_brand.py
tests/utils/: test_rate_limiter.py
