[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mscan"
version = "0.1.0"
description = "CLI tool to scan websites for marketing technology vendors"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "playwright>=1.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "backoff>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
]

[project.scripts]
mscan = "mscan.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mscan"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/man",
]
